chore: initial commit

--- a/.gitattributes
+++ b/.gitattributes
@@ -17,5 +17,6 @@
 /.projen/tasks.json linguist-generated
 /LICENSE linguist-generated
 /package.json linguist-generated
+/src/lambda/secure-string-parameter-handler-function.ts linguist-generated
 /tsconfig.dev.json linguist-generated
 /yarn.lock linguist-generated
