--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "secure-string-parameter",
+  "name": "cdk-secure-string-parameter",
+  "description": "SecureStringParameter Custom Resource for CDK. Enables storing encrypted secrets in version control and using those values in creating SSM SecureString Parameters",
   "repository": {
     "type": "git",
     "url": "https://github.com/matti.saikkonen/secure-string-parameter.git"
@@ -7,6 +8,9 @@
   "scripts": {
     "build": "npx projen build",
     "bump": "npx projen bump",
+    "bundle": "npx projen bundle",
+    "bundle:lambda/secure-string-parameter-handler.lambda": "npx projen bundle:lambda/secure-string-parameter-handler.lambda",
+    "bundle:lambda/secure-string-parameter-handler.lambda:watch": "npx projen bundle:lambda/secure-string-parameter-handler.lambda:watch",
     "clobber": "npx projen clobber",
     "compat": "npx projen compat",
     "compile": "npx projen compile",
@@ -35,15 +39,22 @@
     "organization": false
   },
   "devDependencies": {
-    "@types/jest": "^28.1.3",
+    "@aws-sdk/client-kms": "^3.121.0",
+    "@aws-sdk/client-ssm": "^3.121.0",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
+    "@types/aws-lambda": "^8.10.101",
+    "@types/jest": "27.5.2",
     "@types/node": "^14",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk-lib": "2.1.0",
+    "aws-cdk-lib": "2.24.0",
     "constructs": "10.0.5",
+    "esbuild": "^0.14.48",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
-    "eslint-import-resolver-typescript": "^3.1.1",
+    "eslint-import-resolver-typescript": "^3.1.3",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^27",
     "jest-junit": "^13",
@@ -53,17 +64,29 @@
     "jsii-pacmak": "^1.61.0",
     "json-schema": "^0.4.0",
     "npm-check-updates": "^12",
-    "projen": "^0.58.17",
+    "projen": "^0.58.21",
     "standard-version": "^9",
     "ts-jest": "^27",
+    "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "^2.1.0",
+    "aws-cdk-lib": "^2.24.0",
     "constructs": "^10.0.5"
   },
+  "dependencies": {
+    "uuid": "^8.3.2"
+  },
+  "bundledDependencies": [
+    "uuid"
+  ],
   "keywords": [
-    "cdk"
+    "cdk",
+    "encrypted",
+    "parameter store",
+    "securestring",
+    "securestringparameter",
+    "ssm"
   ],
   "main": "lib/index.js",
   "license": "Apache-2.0",
@@ -109,7 +132,7 @@
     }
   },
   "types": "lib/index.d.ts",
-  "stability": "stable",
+  "stability": "experimental",
   "jsii": {
     "outdir": "dist",
     "targets": {},
