docs: elaborate plaintext usage in readme and update some descriptions

--- a/package.json
+++ b/package.json
@@ -84,9 +84,10 @@
     "cdk",
     "encrypted",
     "parameter store",
+    "secure string parameter",
     "securestring",
-    "securestringparameter",
-    "ssm"
+    "ssm",
+    "stringparameter"
   ],
   "main": "lib/index.js",
   "license": "Apache-2.0",
