--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -206,6 +206,14 @@
         }
       ]
     },
+    "prepare": {
+      "name": "prepare",
+      "steps": [
+        {
+          "exec": "husky install"
+        }
+      ]
+    },
     "release": {
       "name": "release",
       "description": "Prepare a release from \"main\" branch",
