--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,6 @@ jspm_packages/
 .yarn-integrity
 .cache
 cdk.out
-!/.projenrc.js
 /test-reports/
 junit.xml
 /coverage/
@@ -41,7 +40,6 @@ junit.xml
 !/.github/workflows/release.yml
 !/.mergify.yml
 !/.github/workflows/upgrade-main.yml
-!/.npmrc
 !/test/
 !/tsconfig.dev.json
 !/src/
@@ -53,3 +51,4 @@ tsconfig.json
 !/API.md
 /assets/
 !/src/lambda/secure-string-parameter-handler-function.ts
+!/.projenrc.ts
