--- a/package.json
+++ b/package.json
@@ -39,44 +39,42 @@
     "organization": false
   },
   "devDependencies": {
-    "@aws-sdk/client-kms": "^3.410.0",
-    "@aws-sdk/client-ssm": "^3.410.0",
-    "@commitlint/cli": "^17.7.1",
-    "@commitlint/config-conventional": "^17.7.0",
-    "@types/aws-lambda": "^8.10.120",
-    "@types/jest": "^29.5.4",
-    "@types/node": "^16",
-    "@types/uuid": "^9.0.3",
+    "@aws-sdk/client-kms": "^3.503.1",
+    "@aws-sdk/client-ssm": "^3.503.1",
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
+    "@types/aws-lambda": "^8.10.133",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^18",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6",
     "@typescript-eslint/parser": "^6",
     "aws-cdk-lib": "2.24.0",
     "constructs": "10.0.5",
-    "esbuild": "^0.19.2",
+    "esbuild": "^0.20.0",
     "eslint": "^8",
-    "eslint-import-resolver-node": "^0.3.9",
-    "eslint-import-resolver-typescript": "^3.6.0",
-    "eslint-plugin-import": "^2.28.1",
-    "husky": "^8.0.3",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "husky": "^9.0.7",
     "jest": "^29.7.0",
     "jest-junit": "^15",
-    "jsii": "~5.0.0",
-    "jsii-diff": "^1.88.0",
-    "jsii-docgen": "^9.1.2",
-    "jsii-pacmak": "^1.88.0",
-    "jsii-rosetta": "~5.0.0",
-    "npm-check-updates": "^16",
-    "projen": "^0.73.15",
+    "jsii": "~5.3.0",
+    "jsii-diff": "^1.94.0",
+    "jsii-docgen": "~10.3.13",
+    "jsii-pacmak": "^1.94.0",
+    "jsii-rosetta": "~5.3.0",
+    "projen": "^0.79.7",
     "standard-version": "^9",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "peerDependencies": {
     "aws-cdk-lib": "^2.24.0",
     "constructs": "^10.0.5"
   },
   "dependencies": {
-    "uuid": "^8.3.2"
+    "uuid": "^9.0.1"
   },
   "bundledDependencies": [
     "uuid"
@@ -126,11 +124,13 @@
         }
       ]
     ],
-    "preset": "ts-jest",
-    "globals": {
-      "ts-jest": {
-        "tsconfig": "tsconfig.dev.json"
-      }
+    "transform": {
+      "^.+\\.[t]sx?$": [
+        "ts-jest",
+        {
+          "tsconfig": "tsconfig.dev.json"
+        }
+      ]
     }
   },
   "types": "lib/index.d.ts",
