--- a/package.json
+++ b/package.json
@@ -39,42 +39,43 @@
     "organization": false
   },
   "devDependencies": {
-    "@aws-sdk/client-kms": "^3.503.1",
-    "@aws-sdk/client-ssm": "^3.503.1",
-    "@commitlint/cli": "^18.6.0",
-    "@commitlint/config-conventional": "^18.6.0",
-    "@types/aws-lambda": "^8.10.133",
-    "@types/jest": "^29.5.11",
-    "@types/node": "^18",
-    "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^6",
-    "@typescript-eslint/parser": "^6",
+    "@aws-sdk/client-kms": "3.825.0",
+    "@aws-sdk/client-ssm": "3.825.0",
+    "@commitlint/cli": "19.8.1",
+    "@commitlint/config-conventional": "19.8.1",
+    "@stylistic/eslint-plugin": "^2",
+    "@types/aws-lambda": "8.10.149",
+    "@types/jest": "29.5.14",
+    "@types/node": "22.15.30",
+    "@types/uuid": "10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8",
+    "@typescript-eslint/parser": "^8",
     "aws-cdk-lib": "2.123.0",
+    "commit-and-tag-version": "^12",
     "constructs": "10.0.5",
-    "esbuild": "^0.20.0",
-    "eslint": "^8",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "husky": "^9.0.7",
-    "jest": "^29.7.0",
-    "jest-junit": "^15",
-    "jsii": "~5.3.0",
-    "jsii-diff": "^1.94.0",
-    "jsii-docgen": "~10.3.13",
-    "jsii-pacmak": "^1.94.0",
-    "jsii-rosetta": "~5.3.0",
-    "projen": "^0.79.7",
-    "standard-version": "^9",
-    "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "esbuild": "0.25.5",
+    "eslint": "^9",
+    "eslint-import-resolver-typescript": "4.4.3",
+    "eslint-plugin-import": "2.31.0",
+    "husky": "9.1.7",
+    "jest": "29.7.0",
+    "jest-junit": "^16",
+    "jsii": "^5.8",
+    "jsii-diff": "1.112.0",
+    "jsii-docgen": "^10.5.0",
+    "jsii-pacmak": "1.112.0",
+    "jsii-rosetta": "^5.8",
+    "projen": "0.92.9",
+    "ts-jest": "29.3.4",
+    "ts-node": "10.9.2",
+    "typescript": "5.8.3"
   },
   "peerDependencies": {
     "aws-cdk-lib": "^2.123.0",
     "constructs": "^10.0.5"
   },
   "dependencies": {
-    "uuid": "^9.0.1"
+    "uuid": "11.1.0"
   },
   "bundledDependencies": [
     "uuid"
@@ -90,11 +91,17 @@
   ],
   "main": "lib/index.js",
   "license": "Apache-2.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "version": "0.0.0",
   "jest": {
+    "coverageProvider": "v8",
     "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
-      "<rootDir>/(test|src)/**/*(*.)@(spec|test).ts?(x)"
+      "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
+      "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
+      "<rootDir>/@(projenrc)/**/*(*.)@(spec|test).ts?(x)",
+      "<rootDir>/@(projenrc)/**/__tests__/**/*.ts?(x)"
     ],
     "clearMocks": true,
     "collectCoverage": true,
